# skills-lab-v2

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  requirements.txt
.claude/: launch.json
backend/: add_module_to_course.py  algorithm_patterns.py  auth.py  auth_models_draft.py  auto_review.py  celery_app.py  course_asset_backfill.py  course_assets.py  database.py  docker_runner.py  hands_on.py  learner_surface.py  main.py  markdown_strip.py  ontology.py  output_validator.py  patch_ux_course.py  patch_ux_course_part2.py  per_step.py  runtime_versions.py  schemas.py  tasks.py  tech_schema.py  tech_schema_data.py  verified_facts.py  verified_facts_data.py
cli/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cli/examples/: .skillslab.yml  PRD.md  SPEC.md
cli/src/skillslab/: __init__.py  api.py  check.py  cli.py  cli_runners.py  render.py  rules.py  state.py  theme.py
cli/src/skillslab/views/: __init__.py  celebration.py  step_card.py  toc.py
cli/tests/: smoke_terminal.py  test_attempts.py  test_browser_url.py  test_check.py  test_render.py  test_rules.py  test_state.py  test_theme.py  test_views.py
frontend/: index.html
reviews/: beginner_stream_aie_v5_2026-04-25.md  beginner_stream_jspring_v1_2026-04-25.md  beginner_stream_jspring_v2_2026-04-25.md  beginner_stream_jspring_v3_2026-04-25.md  beginner_stream_jspring_v4_2026-04-25.md  beginner_stream_kimi_v1_2026-04-25.md  beginner_stream_kimi_v2_2026-04-25.md  beginner_stream_kimi_v3_2026-04-25.md  beginner_stream_kimi_v4_2026-04-25.md  beginner_stream_kimi_v5_2026-04-25.md  beginner_stream_nontech_v2_2026-04-24.md  beginner_stream_walkthrough_2026-04-22.md  beginner_stream_walkthrough_2026-04-22_v1-cc-terminal_claude-code.md  beginner_stream_walkthrough_2026-04-22_v1-pm-ai_pm-course.md  beginner_stream_walkthrough_2026-04-22_v1_go-basics.md  (+61 more)
(+137 files in other folders)
